src/test/deca/context/valid/created/null/null.deca
// Description :
//		test utilisation null
//
// Resultats :
//		Ok

class B{
}

{
B b = null;
}