src/test/deca/context/invalid/created/binary_exp/op_bool/and_null_boolean.deca
// Description :
//    test and entre un null et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche null. Type droit boolean Type attendu: ‘boolean’
class A{}
{
null a;
boolean b;
boolean c = a && b;
}
